--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ themes/zephyr/acf-json/.DS_Store
 .DS_Store
 
 plugins/duplicator/
+
 /themes/zephyr/assets/trash-compiled-files/
 
-themes/zephyr/assets/*\.html
+/themes/zephyr/assets/*\.html
