--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,6 @@ themes/zephyr/acf-json/.DS_Store
 
 plugins/duplicator/
 
-/themes/zephyr/assets/trash-compiled-files/
+/themes/zephyr/assets/trash-compiled-files/**/*
 
 /themes/zephyr/assets/*\.html
